<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.taskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:text="@string/departureLabel"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/departureTime_task"
                    android:text="XX:XX"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/beginLabel"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/beginTime"
                    android:text="XX:XX"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/endLabel"
                    android:padding="3dp"/>
                <TextView
                    android:id="@+id/endTime"
                    android:text="XX:XX"/>
            </TableRow>
            <View
                android:layout_height="3dip"
                android:background="#FF909090" />

        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/descriptionLabel"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
                <View android:layout_width="2dp"
                    android:background="#FF909090"
                    android:layout_height="match_parent"/>
                <TextView
                    android:text="@string/carLabel"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:width="0dp"/>
            </TableRow>
            <View
                android:layout_height="1dip"
                android:background="#FF909090" />
            <TableRow>
                <TextView
                    android:id="@+id/descriptionText"
                    android:text="INSERT TASK DESCRIPTION"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:lines="5"
                    />
                <View android:layout_width="2dp"
                    android:background="#FF909090"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/passengerList"
                    android:text="INSERT LIST OF PASSENGERS OR 0"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/costaffLabel"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/sendMessageToCostaff"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sendButtonAllLabel"/>
        </LinearLayout>
        <ListView
            android:id="@+id/listCostaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>