<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buro.BuroActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sendMessageSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_message"/>

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">
            </SearchView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/onlyRaceCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/checkBoxRaceLabel"
                android:padding="3dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/selectAllButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/selectAll"
                android:padding="3dp"
                android:layout_weight="3" />
            <Button
                android:id="@+id/unselectAllButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deselectAll"
                android:padding="3dp"
                android:layout_weight="3"/>
        </LinearLayout>
        <View
            android:layout_height="3dip"
            android:layout_width="match_parent"
            android:background="#FF909090" />

        <ListView
            android:id="@+id/listStaff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
</RelativeLayout>