<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".sendSms.SendSmsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/recipsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipientsLabel"/>

            <ListView
                android:id="@+id/listRecipients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_above="@id/messageLabel"
                android:layout_below="@id/recipsLabel">
            </ListView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messageLabel"
                android:id="@+id/messageLabel"
                android:layout_above="@id/editTextMessage"
                />
            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/messageText"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="8"
                tools:ignore="LabelFor"
                android:layout_above="@id/buttonSend"/>
            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/sendButtonLabel" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

