<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_day"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10sp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/day_figures"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <TextView
        android:id="@+id/popup_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trail 1 : 8km, 400D+" />

    <TextView
        android:id="@+id/popup_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CP 1" />

    <TextView
        android:id="@+id/popup_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VTT 1 : 15km, 606D+" />

    <TextView
        android:id="@+id/popup_line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Escalade" />

    <TextView
        android:id="@+id/popup_line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CP 2" />

    <TextView
        android:id="@+id/popup_line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Village d'activités Meet and Challenge" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/profil"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/profil"
        android:layout_width="277dp"
        android:layout_height="131dp"
        android:src="@drawable/profil"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/close"/>

</LinearLayout>