<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/task">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/departureLabel"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/departureTime_schedule"
                    android:text="TIME"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingLeft="8dp"/>
            </LinearLayout>
            <View android:layout_width="2dp"
                android:background="#FF909090"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/beginLabel"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/beginTime_schedule"
                    android:text="TIME"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"/>
            </LinearLayout>
            <View android:layout_width="2dp"
                android:background="#FF909090"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:text="@string/endLabel"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent"/>
                <TextView
                    android:id="@+id/endTime_schedule"
                    android:text="TIME"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingLeft="8dp"/>
            </LinearLayout>

        </TableRow>
        <View
            android:layout_height="1dip"
            android:background="#FF909090"
            android:layout_width="match_parent" />
        <TableRow>
            <TextView
                android:id="@+id/nameTask_schedule"
                android:text="@string/title_activity_task"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:maxLines="4" />
            <View android:layout_width="2dp"
                android:background="#FF909090"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/descriptionTask_schedule"
                android:text="INSERT TASK DESCRIPTION"
                android:textStyle="bold"
                android:layout_weight="1"
                android:width="0dp"/>
        </TableRow>
        <View android:layout_width="4dip"
            android:background="#FF909090"
            android:layout_height="4dip"/>
    </TableLayout>
</RelativeLayout>